상품 관리하기에서 상품 카테고리로 조회하는 기능 추가

--- a/src/main/resources/templates/item/itemMng.html
+++ b/src/main/resources/templates/item/itemMng.html
@@ -108,7 +108,7 @@
                 <option value="의류">의류</option>
                 <option value="강아지 용품">강아지 용품</option>
                 <option value="장난감">장난감</option>
-                <option value="음식">음식</option>
+                <option value="사료(껌)">사료(껌)</option>
                 <option value="기타">기타</option>
             </select>
             <select th:field="*{searchBy}" class="form-control" style="width:auto;">
