--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -909,7 +909,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="" style="color:white">사료</a>
+                    <a href="" style="color:white">사료 & 껌</a>
                     <ul class="sub">
                         <li><a href="">습식</a></li>
                         <li><a href="">건식</a></li>
