Navbar dropdown 메뉴로 변경 & 전체 폰트 수정

--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -18,14 +18,11 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
-        @font-face {
-            font-family: 'DungGeunMo-Regular';
-            src: url('https://cdn.jsdelivr.net/gh/wooin21/web/fonts/etc/DungGeunMo-Regular.woff');
-            font-weight: normal;
-            font-style: normal;
-        }
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+
         body {
-            font-family: 'DungGeunMo-Regular';
+            font-family: 'IBM Plex Sans KR', sans-serif;
             background-color: #ddd9d3;
             height: 100%;
         }
