--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -383,7 +383,7 @@
 
         .search-box {
           width: 100%;
-          max-width: 31.25rem;
+          max-width: 25rem;
           margin: 10rem auto;
           transform: translate(8%, 20%);
         }
@@ -434,11 +434,11 @@
           -moz-box-shadow: 0 0 0px #fff;
           box-shadow: 0 0 0px #fff;
           margin-left: 120px;
-          max-width: 40rem;
+          max-width: 42rem;
           text-align: center;
           transform: translate(53%, -30%);
-          width: auto;
-          height: auto;
+          width: 700px;
+          height: 150px;
         }
 
         /* a little "umph" */
@@ -641,9 +641,9 @@
         .logo {
            align-items: center;
            display: flex;
-           margin-left: 50px;
+           margin-left: 80px;
            margin-top: 300px;
-           margin-bottom: 20px;
+           margin-bottom: 30px;
            flex-basis: content;
            flex-direction: column;
         }
@@ -871,7 +871,7 @@
         </div>
     </div>
 
-    <div class="menu" style="position:relative;">
+    <div class="menu" style="position:sticky;">
         <div class="sticker">
             <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
         </div>
@@ -880,10 +880,10 @@
         </div>
         <br>
         <span class="decor"></span>
-        <nav class="mini-nav">
+        <nav class="mini-nav" >
             <ul class="primary">
                 <li>
-                    <a href="/search/item" style="color:white">강아지 의류</a>
+                    <a href="" style="color:white">강아지 의류</a>
                     <ul class="sub">
                         <li><a href="">목줄 & 하네스</a></li>
                         <li><a href="">상하의</a></li>
@@ -918,7 +918,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="" style="color:white">etc</a>
+                    <a href="" style="color:white">기타</a>
                 </li>
             </ul>
         </nav>
