--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
+<th:block layout:fragment="css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+
+        .navbar {
+            font-family: 'Roboto Condensed', sans-serif;
+        }
+    </style>
+</th:block>
+
 <div th:fragment="header">
     <nav class="navbar navbar-expand-sm navbar-light py-md-0" style="background-color: #343A40; margin-bottom:-50px;">
         <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -11,45 +22,62 @@
         </button>
         <a class="navbar-brand" href="/">
             <img src="https://cdn-icons-png.flaticon.com/128/4966/4966345.png" alt="" width="40" style="margin-left: 10px; margin-right: -8px;">
-                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">댕</b>
-                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D;">댕</b>
-                <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -9px">월</b>
-                <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 5px">드</b>
         </a>
+        <div class="web-title" style="font-family: 'Single Day', cursive;">
+            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">댕</b>
+            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">댕</b>
+            <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">월</b>
+            <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: 5px">드</b>
+        </div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03" style="white-space: nowrap;">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item"
-                            sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                    <a class="nav-link" style="color:white" href="/admin/item/new">상품 등록</a>
+                <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                    <a class="nav-link dropdown-toggle" style="color:white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Item
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/admin/item/new">상품 등록</a>
+                        <a class="dropdown-item" href="/admin/items">상품 관리</a>
+                        <div class="dropdown-divider"></div>
+                    </div>
                 </li>
-                <li class="nav-item"
-                            sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                    <a class="nav-link" style="color:white" href="/admin/items">상품 관리</a>
+
+                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                    <a class="nav-link dropdown-toggle" style="color:white;" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        MyPage
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item"  href="/members/myInfo">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                        </svg> 나의 정보</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/cart">장바구니</a>
+                        <a class="dropdown-item" href="/orders">구매이력</a>
+                    </div>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" style="color:white" href="/orders">구매이력</a>
-                </li>
-                <li class="nav-item" sec:authorize="isAnonymous()">
-                    <a class="nav-link" style="color:white" href="/members/login">로그인</a>
-                </li>
-                <li class="nav-item">
-                    <a sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;"><span sec:authentication="name" style="display:inline-block; color:white; height:15px; font-size: 15px; margin-left:550px; padding:8px">
-                    </span> 님</span></a>
-                    <span sec:authorize="isAuthenticated()" style="color:white; font-size: 15px; margin-right:5px;">
-                    </span>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" style="color:white" href="/cart">장바구니</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" style="color:white" href="/members/myInfo">마이페이지 </a>
-                </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" style="color:orange;" href="/members/logout">로그아웃</a>
+
+                <li class="nav-item dropdown" style="margin-left: 900px;">
+                    <a class="nav-link dropdown-toggle" style="color:white" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         login / logout
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <span class="dropdown-item" sec:authorize="isAuthenticated()">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                            </svg>
+                        <span sec:authentication="name" style="color:grey"></span>
+                        </span>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" sec:authorize="isAnonymous()" href="/members/login">로그인</a>
+                        <a class="dropdown-item" sec:authorize="isAuthenticated()" href="/members/logout">로그아웃</a>
+                    </div>
                 </li>
             </ul>
         </div>
     </nav>
 </div>
+
+</th:block>
 
 </html>
