--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -86,10 +86,10 @@
         }
         .social-button {
             top: 20px;
-            width: 230px;
+            width: 200px;
             height: 55px;
             background-position: 25px 0px;
-            transform: translate(15%, -200%);
+            transform: translate(25%, -200%);
             box-sizing: border-box;
             color: rgb(255, 255, 255);
             cursor: pointer;
@@ -180,11 +180,13 @@
             </div>
             <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
             <br>
-            <a href="#" onclick="location.href='/members/findMember'" class="forget" style="color:red;">비밀번호를 잊어버리셨다면? Click!</a>
+            <a href="#" onclick="location.href='/members/findMember'" class="forget" style="color:red;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg> &nbsp;비밀번호를 잊어버리셨다면? Click!</a>
         <div class="button_container">
             <button type="submit" class="button" style="margin-top:20px">&nbsp;&nbsp;&nbsp;&nbsp;로그인&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
             <br>
-            <button type="button" class="button" onClick="location.href='/members/select'">&nbsp;&nbsp;&nbsp;&nbsp;회원가입&nbsp;&nbsp;&nbsp;</button>
+            <button type="button" class="button" onClick="location.href='/members/select'">&nbsp;&nbsp;&nbsp;회원가입&nbsp;&nbsp;</button>
             <br>
         </div>
         <div class="sns_button_container">
