--- a/src/main/resources/templates/order/orderConfirm.html
+++ b/src/main/resources/templates/order/orderConfirm.html
@@ -17,42 +17,131 @@
 </th:block>
 
 <div layout:fragment="content">
-    <form role="form" method="post" th:object="${memberFormDto}">
-        <body>
-        <br></br>
-        <h1 class="title">주문자 정보</h1>
-        <div class="order-form">
-            <div class="form-group">
-                <label th:for="name">이름</label>
-                <input type="text" th:field="*{name}" class="form-control" style="width:250px;" readonly>
-            </div>
-            <div class="form-group">
-                <label th:for="email">이메일</label>
-                <input type="email" th:field="*{email}" name="mail" id="mail" class="form-control" style="width:250px;" readonly>
-            </div>
-            <br>
-            <div class="form-group">
-                <label th:for="zipcode">우편번호</label>
-                <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" style="width:200px;" readonly>
-            </div>
-            <div class="form-group">
-                <input type="text" name="addr2" id="addr2" th:field="*{streetadr}" class="form-control" style="margin-top: -30px" readonly>
-            </div>
-            <div class="form-group">
-                <label th:for="detailAdr">상세 주소</label>
-                <input type="text" class="form-control" name="addr3" id="addr3" th:field="*{detailadr}" placeholder="상세 주소를 입력하세요">
-            </div>
-            <br></br>
-            <div style="text-align: center">
-                <button type="button" class="btn btn-primary" style="" onclick="order()">주문하기</button>
-            </div>
-            <div>
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-            </div>
-        </div>
-        </body>
-    </form>
+    <body>
 
-</div>
+    <main>
+        <article class="one">
+            <h2>YUNJAC ORDER</h2>
+            <section class="order-sheet">
+
+                <div class="order-info">
+
+                    <div>
+                        <img src="https://www.yunjac.com/public/2020/09/28/10/12/34/78a5bb8d-b333-4cca-b962-10c87ef4ed92.png">
+                        <div>
+                            <b>자목숙 안티에이징 토너</b>
+                            <p>용량 : 150ml<br>수량 : 1개</p>
+                            <h5>60,000원<h5>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div><span>상품금액</span><strong>60,000원</strong></div>
+                        <div><span>배송비</span><strong>0원</strong></div>
+                        <div><span>상품할인금액</span><strong>0원</strong></div>
+                        <div><span>주문할인금액</span><strong>0원</strong></div>
+                        <div><span>총 결제 예정 금액</span><strong>60,000원</strong></div>
+
+                        <li>장기간 장바구니에 보관하신 상품은 시간이 지남에 따라 가격과 혜택이 변동 될 수 있으며, 최대 30일동안 보관됩니다.</li>
+                        <p>프로모션 코드 사용 안내</p>
+                        <li>프로모션 코드 사용에 따라 최종 결제 금액은 달라질 수 있습니다.</li>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="cs-infor">
+                <div>
+                    <h4>주문고객 정보입력</h4>
+                </div>
+
+                <div>
+                    <input type="email" size="20" placeholder="이메일" id="email">
+                </div>
+
+                <div>
+                    <input type="tel" size="11" placeholder="-없이 입력" id="tel">
+                </div>
+
+                <div>
+                    <div><span>이용약관</span><small>전문보기</small></div>
+                    <textarea name="notice" rows="7">
+
+                    연작 이용약관
+                    제1조 (목적)
+                    본 '신세계인터내셔날 서비스 이용 약관' (이하 "본 약관"이라 합니다)은 이용자가 (주)신세계인터내셔날에서 제공하는 신세계인터내셔날 사이트 및 사이트 관련 각종 서비스 (이하 "서비스"라 합니다)를 이용함에 있어 "신세계인터내셔날"과 “이용자”의 권리 의무 및 책임 사항을 규정함을 목적으로 합니다.
+
+                    제2조 (정의)
+                    본 약관의 주요 용어는 아래와 같이 정의합니다.
+                    ① "연작"은 (주)신세계인터내셔날를 말하며 연작은 신세계가 운영하는 온라인 코스메틱 쇼핑몰을 말합니다.
+                    ② "서비스"란 신세계인터내셔날 사이트 및 사이트 관련 각종 서비스를 말합니다.
+                    ③ “이용자”란 "사이트"에 접속하여 이 약관에 따라 "신세계인터내셔날"이 제공하는 “서비스”를 받는 “회원”과 비회원을 말합니다.
+                    ④ "회원"은 "신세계인터내셔날"에 개인 정보를 제공하여 회원 등록을 한 자로서, 회원 전용 "서비스"를 이용할 수 있는 자를 말합니다.
+                    ⑤ "비회원"이라 함은 회원에 가입하지 않고 "서비스"를 이용하는 자를 말합니다.
+
+                    2. 이 약관에서 정하지 아니한 내용과 이 약관의 해석에 관하여는 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제 등에 관한 법률, 공정거래위원 회가 정하는 전자상거래 등에서의 소비자보호지침 및 관계법령 또는 상관례에 따릅니다
+
+
+                    제 3조 (약관의 게시와 변경)
+                    1. "신세계인터내셔날"은 이 약관의 내용과 상호, 영업소 소재지 주소(소비자의 불만을 처리할 수 있는 곳의 주소를 포함)전화번호, 모사전송번호, 이메일 주소, 사업자등록번호, 통신판매업신고번호, 개인정보보호책임자 등을 이용자가 쉽게 알 수 있도록 “신세계인터내셔날”의 초기 서비스화면(전면)에 게시합니다. 다만, 약관의 내용은 이용자가 연결화 면을 통하여 볼 수 있도록 할 수 있습니다.
+
+                    2. "신세계인터내셔날"은 이용자가 약관에 동의하기에 앞서 약관에 정하여져 있는 내용 중 청약철회, 배송책임, 환불조건 등과 같은 중요한 내용을 이용 자가 이해할 수 있도록 별도의 연결화면 또는 팝업화면 등을 제공하여 이용자의 확인을 구하여야 합니다.
+
+                    3. "신세계인터내셔날"은 「전자상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「전자문서 및 전자거래기본법」, 「전자금융거래법」, 「전자서명법」, 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」, 「방문판매 등에 관한 법률」, 「소비자기본법」 등 관련 법을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
+
+                    4. "신세계인터내셔날"은 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행약관과 함께 홈페이지의 초기화면에 그 적용일 7일 이전부터 적용일자 전일까지 공지합니다. 다만, 이용자에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지합니다. 이 경우 "신세계인터내셔날"은 개정 전 내용과 개정 후 내용을 명확하게 비교하여 이용자가 알기 쉽도록 표시합니다.
+
+                    5. 변경된 약관 조항 중 상품의 구매계약에 관한 조항은 그 적용일자 이후에 체결되는 계약에만 적용되고 그 이전에 이미 체결된 계약에 대해서는 변경전의 조항이 그대로 적용됩니다. 다만, 이미 매매계약을 체결한 이용자가 변경된 조항의 적용을 받기를 원하는 뜻을 상기 제4항에 의한 변경약관의 공지기간 내에 "신세계인터내셔날"에 송신하여 "신세계인터내셔날"의 동의를 받은 경우에는 변경된 조항이 적용됩니다.
+
+                    6. "신세계인터내셔날"이 개정약관을 공지 또는 통지하면서 회원에게 30일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 따로 공지 또는 고지하였음에도 회원이 명시적으로 거부의사를 표시하지 아니한 경우 회원이 개정약관에 동의한 것으로 봅니다. 또한, 회원이 개정약관의 적용에 동의하지 않는 경우 "신세계인터내셔날"은 개정약관의 내용을 적용할 수 없으며, 이 경우, 회원은 이용계약을 해지할 수 있습니다. 다만, 기존약관을 적용할 수 없는 특별한 사정이 있는 경우에는 "나이키닷컴"은 이용계약을 해지할 수 있습니다.
+
+                    7. 이 약관에서 정하지 아니한 내용과 이 약관의 해석에 관하여 전자상거래 등에서의 소비자보호에 관한 법률, 약관의 규제 등에 관한 법률, 공정거래위원회가 정하 는 전자상거래 등에서의 소비자보호지침 및 관계법령 또는 상관례에 따릅니다.
+</textarea>
+                </div>
+
+                <div>
+                    <input type="checkbox">개인정보 수집·이용 동의 </input><br>
+                </div>
+            </section>
+
+        </article>
+    </main>
+
+
+
+    <article class="two">
+
+
+        <section class="cs-infor-2">
+
+            <div>
+                <input type="text" placeholder="이름" id="name">
+            </div>
+
+            <div>
+                <input type="tel" placeholder="휴대폰" id="tel">
+            </div>
+
+            <div>
+                <div>
+                    <input type="text" placeholder="주소지"></input><button>검색</button>
+                </div>
+                <input type="text" placeholder="상세주소">
+            </div>
+
+            <select>
+                <option selected>배송 메모를 선택해주세요.</option>
+                <option>부재시 경비실에 맡겨주세요.</option>
+                <option>부재시 연락을 남겨주세요.</option>
+                <option>문앞에 놓아주세요.</option>
+            </select>
+
+            <div>
+                <button>다음단계 진행</button>
+            </div>
+
+        </section>
+
+    </article>
 
 </html>
