--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,9 @@
         .navbar {
             font-family: 'Roboto Condensed', sans-serif;
         }
+        div {
+          white-space: nowrap;
+        }
     </style>
 </th:block>
 
@@ -23,7 +26,7 @@
         <a class="navbar-brand" href="/">
             <img src="https://cdn-icons-png.flaticon.com/128/4966/4966345.png" alt="" width="40" style="margin-left: 10px; margin-right: -8px;">
         </a>
-        <div class="web-title" style="font-family: 'Single Day', cursive;">
+        <div class="web-title" style="font-family: 'Single Day', cursive; white-space: nowrap;">
             <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">댕</b>
             <b style="font-size: 28px; color:#E1B771; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">댕</b>
             <b style="font-size: 28px; color:#957745; text-shadow: -1px 0 #0D0D0D, 0 1px #0D0D0D, 1px 0 #0D0D0D, 0 -1px #0D0D0D; margin-right: -2px">월</b>
@@ -38,7 +41,6 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/admin/item/new">상품 등록</a>
                         <a class="dropdown-item" href="/admin/items">상품 관리</a>
-                        <div class="dropdown-divider"></div>
                     </div>
                 </li>
 
