--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -166,11 +166,12 @@
                     <div style="float:left; line-height: 1.5;">가격: </div>
                         <span th:text="${item.price}" style="line-height: 1.5;"></span>원
                     <div style="text-align: left; line-height: 1.5;">배송비:2500원</div>
-                    <h6 style="float:left; font-size:14px;">도서산간지역 배송비 5000원/3만원 이상 결제시 무료배송</h6>
-                    <div style="text-align: left; line-height: 1.5;">적립금:2030원</div>
-
+                    <h6 style="float:left; font-size:13px;">도서산간지역 배송비 5000원/3만원 이상 결제시 무료배송</h6>
+                    <div style="float:left; line-height: 1.5;">적립금:2030원</div>
                 </div>
-                <div class="input-group w-50">
+                <br>
+                <br>
+                <div th:if="${item.itemSellStatus == T(com.shop.constant.ItemSellStatus).SELL}" class="input-group w-50">
                     <div class="input-group-prepend">
                         <span class="input-group-text">구매 수량</span>
                     </div>
@@ -179,7 +180,7 @@
             </div>
             <hr class="my-4">
 
-            <div class="text-right mgt-50">
+            <div th:if="${item.itemSellStatus == T(com.shop.constant.ItemSellStatus).SELL}" class="text-right mgt-50">
                 <h5>결제 금액</h5>
                 <h3 name="totalPrice" id="totalPrice" class="font-weight-bold"></h3>
             </div>
