--- a/src/main/resources/templates/layouts/layout2.html
+++ b/src/main/resources/templates/layouts/layout2.html
@@ -17,6 +17,14 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+
+        body {
+            font-family: 'IBM Plex Sans KR', sans-serif;
+            background-color: #ddd9d3;
+            height: 100%;
+        }
         .item .card:hover {border: #0D0D0D 1px solid;}
     </style>
 
