--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -953,7 +953,7 @@
           <div class="product-details">
             <span class="product-catagory">[[${item.itemCategory}]]</span>
                 <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
-                <p>[[${item.itemDetail}]]</p>
+                <p class="card-text">[[${item.itemDetail}]]</p>
             <div class="product-bottom-details">
                 <div class="product-price">&#8361; [[${item.price}]]</div>
                 <div class="product-links">
