--- a/src/main/resources/templates/item/itemMng.html
+++ b/src/main/resources/templates/item/itemMng.html
@@ -106,7 +106,7 @@
             </select>
             <select th:field="*{searchSellStatus}" class="form-control" style="width:auto;">
                 <option value="">판매상태(전체)</option>
-                <option value="SELL">판매</option>
+                <option value="SELL">판매중</option>
                 <option value="SOLD_OUT">품절</option>
             </select>
             <select th:field="*{searchItemCategory}" class="form-control" style="width:auto;">
