상품 카테고리별 조회 기능 구현

--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -113,11 +113,11 @@
                <span class="input-group-text">상품 카테고리</span>
                <div class="select-group">
                    <select th:field="*{itemCategory}" class="custom-select" style="width:250px;">
-                       <option value="의류">의류</option>
-                       <option value="강아지 용품">강아지 용품</option>
-                       <option value="장난감">장난감</option>
-                       <option value="사료(껌)">사료(껌)</option>
-                       <option value="기타">기타</option>
+                       <option value="[의류]">의류</option>
+                       <option value="[강아지 용품]">강아지 용품</option>
+                       <option value="[장난감]">장난감</option>
+                       <option value="[사료(껌)]">사료(껌)</option>
+                       <option value="[기타]">기타</option>
                    </select>
                </div>
            </div>
