--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -385,7 +385,8 @@
           width: 100%;
           max-width: 25rem;
           margin: 10rem auto;
-          transform: translate(8%, 20%);
+          position: sticky;
+          transform: translate(-90%, 120%);
         }
 
         .label {
@@ -871,6 +872,7 @@
         </div>
     </div>
 
+    <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
     <div class="menu" style="position:sticky;">
         <div class="sticker">
             <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
@@ -883,42 +885,19 @@
         <nav class="mini-nav" >
             <ul class="primary">
                 <li>
-                    <a href="" style="color:white">강아지 의류</a>
-                    <ul class="sub">
-                        <li><a href="">목줄 & 하네스</a></li>
-                        <li><a href="">상하의</a></li>
-                        <li><a href="">신발</a></li>
-                    </ul>
+                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%9D%98%EB%A5%98%5D&searchQuerySubmit=}" style="color:white">강아지 의류</a>
                 </li>
                 <li>
-                    <a href="" style="color:white">강아지 용품</a>
-                    <ul class="sub">
-                        <li><a href="">하우스</a></li>
-                        <li><a href="">배변판</a></li>
-                        <li><a href="">밥그릇</a></li>
-                        <li><a href="">목욕용품</a></li>
-                        <li><a href="">켄넬</a></li>
-                    </ul>
+                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EA%B0%95%EC%95%84%EC%A7%80+%EC%9A%A9%ED%92%88%5D&searchQuerySubmit=}" style="color:white">강아지 용품</a>
                 </li>
                 <li>
-                    <a href="" style="color:white">장난감</a>
-                    <ul class="sub">
-                        <li><a href="">노즈워크</a></li>
-                        <li><a href="">공</a></li>
-                        <li><a href="">터그놀이 장난감</a></li>
-                    </ul>
+                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%9E%A5%EB%82%9C%EA%B0%90%5D&searchQuerySubmit=}"  style="color:white">장난감</a>
                 </li>
                 <li>
-                    <a href="" style="color:white">사료 & 껌</a>
-                    <ul class="sub">
-                        <li><a href="">습식</a></li>
-                        <li><a href="">건식</a></li>
-                        <li><a href="">소프트</a></li>
-                        <li><a href="">껌</a></li>
-                    </ul>
+                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%82%AC%EB%A3%8C%28%EA%BB%8C%29%5D&searchQuerySubmit=}"  style="color:white">사료 & 껌</a>
                 </li>
                 <li>
-                    <a href="" style="color:white">기타</a>
+                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EA%B8%B0%ED%83%80%5D&searchQuerySubmit=}"  style="color:white">기타</a>
                 </li>
             </ul>
         </nav>
@@ -941,6 +920,11 @@
     <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
         <p class="h6 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색결과는 다음과 같습니다'"></p>
     </div>
+
+        <input type="hidden" name="searchQuery" th:value="${itemSearchDto.searchQuery}">
+        <div th:if="${not #strings.isEmpty(itemSearchDto.searchQuery)}" class="center">
+            <p class="h6 font-weight-bold" th:text="${itemSearchDto.searchQuery} + ' 검색결과는 다음과 같습니다'"></p>
+        </div>
 
     <div class="product-card">
         <th:block th:each="item, status: ${items.getContent()}">
