--- a/src/main/resources/templates/item/itemSearchByCategoryForm.html
+++ b/src/main/resources/templates/item/itemSearchByCategoryForm.html
@@ -44,10 +44,10 @@
         .product-card {
             font-family: 'IBM Plex Sans KR', sans-serif;
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 20px;
-            width: 90%;
-            margin: 50px auto;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 30px;
+            width: 80%;
+            margin: 120px auto;
             background: #ddd9d3;
             box-shadow: 0 0 0 #dfdfdf;
         }
@@ -56,14 +56,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 300px;
-            padding: 80px;
+            height: 400px;
+            padding: 50px;
         }
 
         .product-tumb img {
-            max-width: 180%;
-            max-height: 180%;
-            height: 300px;
+            max-width: 100%;
+            max-height: 100%;
         }
 
         .product-details {
@@ -76,7 +75,7 @@
             font-weight: 700;
             text-transform: uppercase;
             color: #ccc;
-            margin-bottom: 5px;
+            margin-bottom: 18px;
         }
 
         .product-details h4 a {
@@ -103,7 +102,7 @@
         .product-bottom-details {
             overflow: hidden;
             border-top: 1px solid #eee;
-            padding-top: 10px;
+            padding-top: 20px;
         }
 
         .product-bottom-details div {
@@ -200,7 +199,7 @@
           font-family: 'IBM Plex Sans KR', sans-serif;
           font-weight: 400;
           text-transform: uppercase;
-          color: grey;
+          color: #d2d2d2;
           letter-spacing: 0.2em;
         }
 
@@ -384,10 +383,9 @@
 
         .search-box {
           width: 100%;
-          max-width: 25rem;
+          max-width: 31.25rem;
           margin: 10rem auto;
-          position: sticky;
-          transform: translate(-90%, 120%);
+          transform: translate(8%, 20%);
         }
 
         .label {
@@ -436,11 +434,11 @@
           -moz-box-shadow: 0 0 0px #fff;
           box-shadow: 0 0 0px #fff;
           margin-left: 120px;
-          max-width: 42rem;
+          max-width: 40rem;
           text-align: center;
           transform: translate(53%, -30%);
-          width: 700px;
-          height: 150px;
+          width: auto;
+          height: auto;
         }
 
         /* a little "umph" */
@@ -643,9 +641,8 @@
         .logo {
            align-items: center;
            display: flex;
-           margin-left: 80px;
-           margin-top: 300px;
-           margin-bottom: 30px;
+           margin-left: 50px;
+           margin-bottom: 20px;
            flex-basis: content;
            flex-direction: column;
         }
@@ -813,107 +810,18 @@
 </th:block>
 
 <div layout:fragment="content">
-  <body style="overflow-x: hidden">
-    <header class="py-5">
-        <div class="image-wrap">
-            <div class="image-thumbnail">
-            </div>
-             <div class="text">
-                    <span style="font-size: 70px">Welcome to</span>
-                    <span style="font-size: 70px">"Daeng Daeng</span>
-                    <span style="font-size: 70px"> World!"</span>
-                    <br>
-                    <span style="font-size: 25px">우리 곁에는 항상</span>
-                    <span style="font-size: 25px">장난끼 많지만</span>
-                    <span style="font-size: 25px">그 모습마저도</span>
-                    <span style="font-size: 25px">사랑스러운</span>
-                    <span style="font-size: 25px">친구들이 있죠.</span>
-                    <br>
-                    <span style="font-size: 25px">댕댕월드는</span>
-                    <span style="font-size: 25px">사람과 강아지 모두가</span>
-                    <span style="font-size: 25px">만족할만한</span>
-                    <span style="font-size: 25px">최상의 상품을</span>
-                    <span style="font-size: 25px">판매합니다.</span>
-                    <br>
-                    <span style="font-size: 25px">사랑하는</span>
-                    <span style="font-size: 25px">강아지와 좋은 추억을 만들어보세요.</span>
-             </div>
-        </div>
-    </header>
-
-    <h2>New<br>Update</h2>
-
-    <div class="wrapper">
-        <th:block th:each="item, status: ${items.getContent()}" th:if="${status.first} == true">
-            <div class="product-img" style="float:left">
-                    <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="420" width="327">
-            </div>
-                    <div class="product-info" style="float:left">
-                      <div class="product-text" style="float:left">
-                        <div class="product-title">[[${item.itemNm}]]</div>
-                        <div class="product-category">[[${item.itemCategory}]]</div>
-                        <p class="card-text">[[${item.itemDetail}]]</p>
-                      </div>
-                      <div class="product-price-btn">
-                          <p class="price-tag">[[${item.price}]] won</p>
-                          <a th:href="'/item/' +${item.id}" class="text-dark">
-                            <button type="button">More Detail</button>
-                          </a>
-                      </div>
-            </div>
-        </th:block>
-    </div>
-
-    <div class="logo">
-        <div>
-            <h1>
-                <span data-text="댕댕">댕댕</span><br>
-                <span data-text="월드">월드</span>
-            </h1>
-        </div>
-    </div>
-
-    <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
-    <div class="menu" style="position:sticky;">
-        <div class="sticker">
-            <img src="https://cdn-icons-png.flaticon.com/256/7286/7286620.png">
-        </div>
-        <div class="sticker2">
-            <img src="https://cdn-icons-png.flaticon.com/256/5965/5965356.png">
-        </div>
-        <br>
-        <span class="decor"></span>
-        <nav class="mini-nav" >
-            <ul class="primary">
-                <li>
-                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%9D%98%EB%A5%98%5D&searchQuerySubmit=}" style="color:white">강아지 의류</a>
-                </li>
-                <li>
-                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EA%B0%95%EC%95%84%EC%A7%80+%EC%9A%A9%ED%92%88%5D&searchQuerySubmit=}" style="color:white">강아지 용품</a>
-                </li>
-                <li>
-                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%9E%A5%EB%82%9C%EA%B0%90%5D&searchQuerySubmit=}"  style="color:white">장난감</a>
-                </li>
-                <li>
-                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EC%82%AC%EB%A3%8C%28%EA%BB%8C%29%5D&searchQuerySubmit=}"  style="color:white">사료 & 껌</a>
-                </li>
-                <li>
-                    <a th:href="@{http://localhost:8080/search?searchQuery=%5B%EA%B8%B0%ED%83%80%5D&searchQuerySubmit=}"  style="color:white">기타</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <body style="overflow-x: hidden">
 
     <div class="search-box">
         <div class="label">찾으시는 상품을 검색해보세요!</div>
         <form class="form-inline my-2 my-lg-0" th:action="@{/search}" method="get">
-        <div class="searchBar">
-            <input id="searchQueryInput" type="search" name="searchQuery" placeholder="ex) 강아지 하네스" aria-label="Search" />
-            <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
-                <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-                </svg>
-            </button>
-        </div>
+            <div class="searchBar">
+                <input id="searchQueryInput" type="search" name="searchQuery" placeholder="ex) 강아지 하네스" aria-label="Search" />
+                <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
+                    <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                    </svg>
+                </button>
+            </div>
         </form>
     </div>
 
@@ -924,35 +832,25 @@
 
     <div class="product-card">
         <th:block th:each="item, status: ${items.getContent()}">
-          <div class="card">
-            <a th:href="'/item/' +${item.id}" class="text-dark">
-                <div class="product-tumb">
-                    <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
-                </div>
-            </a>
-          <div class="product-details">
-              <span class="product-category">[[${item.itemCategory}]]</span>
-                  <br>
-                  <br>
-                  <span th:if="${item.price} > 0" class="badge badge-primary mgb-15">
-                        판매중
-                  </span>
-                  <span th:if="${item.price} == 0" class="badge btn-danger mgb-15">
-                        품절
-                  </span>
-                <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
-                <p class="card-text">[[${item.itemDetail}]]</p>
-            <div class="product-bottom-details">
-                <span th:if="${item.price != 0}">
-                    <div class="product-price">&#8361; [[${item.price}]]</div>
-                </span>
-                <div class="product-links">
-                    <a href=""><i class="fa fa-heart"></i></a>
-                    <a href=""><i class="fa fa-shopping-cart"></i></a>
+            <div class="card">
+                <a th:href="'/item/' +${item.id}" class="text-dark">
+                    <div class="product-tumb">
+                        <img th:src="${item.imgUrl}" class="card-img-top" th:alt="${item.itemNm}" height="400">
+                    </div>
+                </a>
+                <div class="product-details">
+                    <span class="product-catagory">[[${item.itemCategory}]]</span>
+                    <h4><a th:href="'/item/' +${item.id}" class="text-dark">[[${item.itemNm}]]</a></h4>
+                    <p>[[${item.itemDetail}]]</p>
+                    <div class="product-bottom-details">
+                        <div class="product-price">&#8361; [[${item.price}]]</div>
+                        <div class="product-links">
+                            <a href=""><i class="fa fa-heart"></i></a>
+                            <a href=""><i class="fa fa-shopping-cart"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-          </div>
-        </div>
         </th:block>
     </div>
 
@@ -978,8 +876,8 @@
             </li>
         </ul>
     </div>
-  </body>
-  </div>
+    </body>
+</div>
 </div>
 
 </html>
