--- a/src/main/resources/templates/member/passwordCheckForm.html
+++ b/src/main/resources/templates/member/passwordCheckForm.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout2}">
+      layout:decorate="~{layouts/layout1}">
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
-  <style>
+    <style>
         .error {
             color: #bd2130;
         }
@@ -91,57 +91,56 @@
 
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script type="text/javascript">
-    $(document).on('click', '#checkEmail', function() {
-      const email = $("#email").val();
-
-		if (email == "" || email == null || email == undefined) {
-			alert("이메일을 입력해 주세요!")
-			return false;
-		}
-		const sendEmail = document.forms["sendEmail"];
-		$.ajax({
-			url : "/members/findId",
-			type : "post",
-			data : { 'memberEmail': email },
-			dataType : "text",
-			success : function(result) {
-			    console.log(result)
-				if (result === 'null') {
-				    alert('가입되지 않은 이메일입니다!');
-				} else {
-					alert('임시비밀번호를 전송 했습니다.');
-					sendEmail.submit();
-				}
-			},
-			error : function(xhr) {
-				alert("에러코드 = " + xhr.status);
-			}
-		});
-	});
-  </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+    $(document).on('click', '#checkPwd', function() {
+        const checkPassword = $('#password').val();
+        if(!checkPassword || checkPassword.trim() === ""){
+            alert("비밀번호를 입력하세요.");
+        } else{
+            $.ajax({
+                type: 'GET',
+                url: '/members/checkPwd',
+                data: {'checkPassword': checkPassword},
+                datatype: "text"
+            }).done(function(result){
+                console.log(result);
+                if(result){
+                    console.log("비밀번호 일치");
+                    window.location.href="/members/updateForm";
+                } else if(!result){
+                    console.log("비밀번호 틀림");
+                    // 비밀번호가 일치하지 않으면
+                    alert("비밀번호가 맞지 않습니다.");
+                    window.location.reload();
+                }
+            }).fail(function(error){
+                alert(JSON.stringify(error));
+            })
+        }
+    });
+    </script>
 </th:block>
 
 <div id="container" layout:fragment="content">
-  <body>
-  <form role="form" class="text-start" method="post" name="sendEmail" action="/members/sendEmail">
-    <br></br>
-    <h1 class="title" style="margin-top:40px">비밀번호 찾기</h1>
-    <div class="login-form">
-      <div class="form-group">
-        <input type="email" id="email" name="memberEmail" class="form-control" placeholder="회원가입시 입력했던 이메일을 입력하세요." style="width:400px; margin-left:50px; margin-top:40px;" required>
-        <p style="margin-left:80px; margin-top:20px;">입력한 이메일로 임시 비밀번호가 전송됩니다!</p>
-      </div>
-      <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-      <div class="button_container">
-        <button type="button" id="checkEmail" class="button" style="margin-top:20px">&nbsp;&nbsp;비밀번호 발송&nbsp;&nbsp;</button>
-        <br>
-      </div>
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    </div>
-  </form>
-  </body>
+    <body>
+    <form>
+        <br></br>
+        <h1 class="title" style="margin-top:40px">비밀번호 확인</h1>
+        <div class="login-form">
+            <div class="form-group">
+                <input type="text" id="password" name="password" class="form-control" placeholder="비밀번호를 입력하세요" style="width:400px; margin-left:50px; margin-top:40px;" required>
+                <p style="margin-left:80px; margin-top:20px;">회원정보 수정을 위한 비밀번호 확인 절차입니다.</p>
+            </div>
+            <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+            <div class="button_container">
+                <button type="button" id="checkPwd" class="button" style="margin-top:20px">&nbsp;&nbsp;비밀번호 확인&nbsp;&nbsp;</button>
+                <br>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        </div>
+    </form>
+    </body>
 </div>
 
 </html>
