--- a/src/main/resources/templates/mypage/formMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/formMemberMyInfo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns="http://www.w3.org/1999/html"
       layout:decorate="~{layouts/layout1}">
 
@@ -88,6 +88,7 @@
         <br></br>
         <div style="text-align: center">
             <button type="button" onclick="location.href='/'">홈으로</button>
+            <button type="button" onClick="location.href='/members/checkPwdForm'">회원정보 변경</button>
         </div>
         <br></br>
         <div>
