--- a/src/main/resources/templates/member/passwordCheckForm.html
+++ b/src/main/resources/templates/member/passwordCheckForm.html
@@ -129,7 +129,7 @@
         <h1 class="title" style="margin-top:40px">비밀번호 확인</h1>
         <div class="login-form">
             <div class="form-group">
-                <input type="text" id="password" name="password" class="form-control" placeholder="비밀번호를 입력하세요" style="width:400px; margin-left:50px; margin-top:40px;" required>
+                <input type="password" id="password" name="password" class="form-control" placeholder="비밀번호를 입력하세요" style="width:400px; margin-left:50px; margin-top:40px;" required>
                 <p style="margin-left:80px; margin-top:20px;">회원정보 수정을 위한 비밀번호 확인 절차입니다.</p>
             </div>
             <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
