--- a/src/main/resources/templates/mypage/formMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/formMemberMyInfo.html
@@ -68,7 +68,7 @@
             <input type="text" th:value="${member.name}" id="name" class="form-control" style="width:250px;" readonly>
         </div>
         <div class="form-group">
-            <label th:for="name">회원</label>
+            <label th:for="role">회원</label>
             <h5 th:text="일반회원" th:if="${#strings.equals(member.role, 'USER')}"  id="role1" class="form-control" style="width:250px;" readonly></h5>
             <h5 th:text="관리자" th:if="${#strings.equals(member.role, 'ADMIN')}"  id="role2" class="form-control" style="width:250px;" readonly></h5>
         </div>
