--- a/src/main/resources/templates/mypage/oauthMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/oauthMemberMyInfo.html
@@ -83,13 +83,10 @@
             <input type="text" th:value="${member.detailaddress}" class="form-control" readonly>
         </div>
         <br></br>
-        <div style="text-align: center" >
-            <button type="button" onclick="location.href='/'">홈으로</button>
-        </div>
-        <div style="text-align: center">
-            <!-- 버튼 클릭시 바로 회원정보 변경할 수 있게끔 변경해야함 -->
-            <button type="button" onClick="location.href='/'">회원정보 변경</button>
-        </div>
+          <div style="text-align: center">
+              <button type="button" onclick="location.href='/'">홈으로</button>
+              <button type="button" onClick="location.href='/members/updateForm'">회원정보 변경</button>
+          </div>
         <br></br>
         <div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
