자잘한 수정 작업

--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -92,7 +92,7 @@
                 cache   : false,
                 success  : function(result, status){
                     alert("상품을 장바구니에 담았습니다.");
-                    location.href='/';
+                    location.href='/cart';
                 },
                 error : function(jqXHR, status, error){
 
